Add configurable settings for the disk cache plugin

--- a/EquineExchange.ImageHosting/Web.config
+++ b/EquineExchange.ImageHosting/Web.config
@@ -14,15 +14,16 @@
         <add key="app:azureReader.redirectToBlobIfUnmodified" value="false" />
         <add key="app:azureReader.requireImageExtension" value="true" />
         <add key="app:azureReader.untrustedData" value="true" />
+
+        <add key="app:diskCache.enabled" value="false" />
+        <add key="app:diskCache.asyncWrites" value="true" />
     </appSettings>
 
     <resizer>
         <clientcache minutes="1440" />
-        <diskcache asyncWrites="true" enabled="false" />
         <sizelimits imageWidth="0" imageHeight="0" totalWidth="3200" totalHeight="3200" totalBehavior="throwexception" />
         <pipeline defaultCommands="autorotate.default=true" />
         <plugins>
-            <add name="DiskCache" />
             <add name="PrettyGifs" />
         </plugins>
     </resizer>
