--- a/EquineExchange.ImageHosting/EquineExchange.ImageHosting.csproj
+++ b/EquineExchange.ImageHosting/EquineExchange.ImageHosting.csproj
@@ -113,9 +113,11 @@
   <ItemGroup>
     <Compile Include="AppSettings.cs" />
     <Compile Include="AzureReaderSettings.cs" />
+    <Compile Include="DiskCacheSettings.cs" />
     <Compile Include="ImageResizerSettings.cs" />
     <Compile Include="ImageResizingConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringExtensions.cs" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
