--- a/EquineExchange.ImageHosting/packages.config
+++ b/EquineExchange.ImageHosting/packages.config
@@ -6,6 +6,15 @@
   <package id="ImageResizer.Plugins.PrettyGifs" version="4.1.10" targetFramework="net47" />
   <package id="ImageResizer.Storage" version="4.1.10" targetFramework="net47" />
   <package id="ImageResizer.WebConfigAsync" version="4.1.10" targetFramework="net47" />
+  <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net47" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net47" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.4.1" targetFramework="net47" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.4.1" targetFramework="net47" />
+  <package id="Microsoft.ApplicationInsights.SnapshotCollector" version="1.0.10" targetFramework="net47" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.4.1" targetFramework="net47" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.4.1" targetFramework="net47" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.4.0" targetFramework="net47" />
+  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net47" />
   <package id="Microsoft.Azure.KeyVault.Core" version="2.0.4" targetFramework="net47" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net47" />
   <package id="Microsoft.Data.Edm" version="5.8.3" targetFramework="net47" />
@@ -15,6 +24,7 @@
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
   <package id="System.ComponentModel.EventBasedAsync" version="4.3.0" targetFramework="net47" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net47" />
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net47" />
   <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net47" />
   <package id="System.Net.Requests" version="4.3.0" targetFramework="net47" />
