--- a/EquineExchange.ImageHosting/EquineExchange.ImageHosting.csproj
+++ b/EquineExchange.ImageHosting/EquineExchange.ImageHosting.csproj
@@ -144,6 +144,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationInformation.cs" />
     <Compile Include="ApplicationInsights\ApplicationVersionTelemetryInitializer.cs" />
     <Compile Include="ApplicationInsightsConfig.cs" />
     <Compile Include="AppSettings.cs" />
