--- a/EquineExchange.ImageHosting/Web.config
+++ b/EquineExchange.ImageHosting/Web.config
@@ -52,6 +52,7 @@
             <remove name="FormsAuthentication" />
             <remove name="TelemetryCorrelationHttpModule" />
             <remove name="ApplicationInsightsWebTracking" />
+            <add name="ApplicationInsightsConfig" type="EquineExchange.ImageHosting.ApplicationInsightsConfig" />
             <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="integratedMode,managedHandler" />
             <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
             <add name="ImageResizingConfig" type="EquineExchange.ImageHosting.ImageResizingConfig" />
