Add warmup & remote_addr conditions to https rule

--- a/EquineExchange.ImageHosting/Web.Release.config
+++ b/EquineExchange.ImageHosting/Web.Release.config
@@ -11,9 +11,11 @@
         <rewrite xdt:Transform="Insert">
             <rules>
                 <rule name="Force HTTPS" stopProcessing="true">
-                    <match url="(.*)" ignoreCase="false" />
+                    <match url="(.*)" ignoreCase="true" />
                     <conditions>
-                        <add input="{HTTPS}" pattern="off" />
+                        <add input="{WARMUP_REQUEST}" pattern="1" negate="true" />
+                        <add input="{REMOTE_ADDR}" pattern="^100?\." negate="true" />
+                        <add input="{HTTPS}" pattern="^OFF$" />
                     </conditions>
                     <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" appendQueryString="true" redirectType="Permanent" />
                 </rule>
