--- a/EquineExchange.ImageHosting/ApplicationInsights.config
+++ b/EquineExchange.ImageHosting/ApplicationInsights.config
@@ -101,18 +101,18 @@
             <!-- Snapshot Debugging is usually disabled in developer mode, but you can enable it by setting this to true. -->
             <!-- DeveloperMode is a property on the active TelemetryChannel. Default: false -->
             <IsEnabledInDeveloperMode>false</IsEnabledInDeveloperMode>
-            <!-- How many times we need to see an exception before we ask for snapshots. Default: 5 -->
+            <!-- How many times we need to see an exception before we ask for snapshots. Default: 1 -->
             <ThresholdForSnapshotting>1</ThresholdForSnapshotting>
             <!-- The maximum number of snapshots we collect for a single problem. Default: 3 -->
             <MaximumSnapshotsRequired>3</MaximumSnapshotsRequired>
             <!-- The maximum number of problems that we can be tracking at any time. Default: 50 -->
             <MaximumCollectionPlanSize>50</MaximumCollectionPlanSize>
-            <!-- How often to reset problem counters. Default: 06:00:00 -->
-            <ProblemCounterResetInterval>06:00:00</ProblemCounterResetInterval>
-            <!-- The maximum number of snapshots allowed in one minute. Default: 2 -->
-            <SnapshotsPerMinuteLimit>2</SnapshotsPerMinuteLimit>
-            <!-- The maximum number of snapshots allowed per day. Default: 50 -->
-            <SnapshotsPerDayLimit>50</SnapshotsPerDayLimit>
+            <!-- How often to reset problem counters. Default: 24:00:00 -->
+            <ProblemCounterResetInterval>24:00:00</ProblemCounterResetInterval>
+            <!-- The maximum number of snapshots allowed per day. Default: 30 -->
+            <SnapshotsPerDayLimit>30</SnapshotsPerDayLimit>
+            <!--Whether or not to collect snapshot in low IO priority thread.Default: true -->
+            <SnapshotInLowPriorityThread>true</SnapshotInLowPriorityThread>
         </Add>
     </TelemetryProcessors>
     <TelemetryChannel Type="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel.ServerTelemetryChannel, Microsoft.AI.ServerTelemetryChannel"/>
