Update app insights snapshot collector to 1.2.3

--- a/EquineExchange.ImageHosting/ApplicationInsights.config
+++ b/EquineExchange.ImageHosting/ApplicationInsights.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <ApplicationInsights xmlns="http://schemas.microsoft.com/ApplicationInsights/2013/Settings">
     <TelemetryInitializers>
         <Add Type="Microsoft.ApplicationInsights.DependencyCollector.HttpDependenciesParsingTelemetryInitializer, Microsoft.AI.DependencyCollector"/>
@@ -111,7 +111,7 @@
             <ProblemCounterResetInterval>24:00:00</ProblemCounterResetInterval>
             <!-- The maximum number of snapshots allowed per day. Default: 30 -->
             <SnapshotsPerDayLimit>30</SnapshotsPerDayLimit>
-            <!--Whether or not to collect snapshot in low IO priority thread.Default: true -->
+            <!--Whether or not to collect snapshot in low IO priority thread. Default: true -->
             <SnapshotInLowPriorityThread>true</SnapshotInLowPriorityThread>
         </Add>
     </TelemetryProcessors>
