--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,7 @@
-﻿image: Visual Studio 2017
+image: Visual Studio 2017
+
+pull_requests:
+  do_not_increment_build_number: true
 
 branches:
   only:
